--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -59,6 +59,12 @@
                     <path stroke-linecap="round" strokelinejoin="round" d="M3 3h2l.4 2M7 13h10l4-8H5.4m0 0L7 13m0 0l-1.1 5M7 13l-1.1
                     5m0 0h1.1m0-5v5m0 0h10m-10 0a2 2 0 104 0m6 0a2 2 0 100 4"/>
                 </svg>
+                <!--ICONO DE LOGIN - AGREGAR AQUI -->
+                <a href="./login.html" class="relative group p-2.5 hover:bg-linear-to-r hover:from-blue-50 hover:to-indigo-50 rounded-xl transition-all duration-300 transform hover:scale-105">
+                    <svg class="w-6 h-6 text-gray-700 hover:text-blue-600 transition-all duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"/>
+                    </svg>
+                </a>
                 <!-- Contador con efecto pulso mejorado -->
                 <span id="cart-counter" class="cart-counter-pulse
                 absolute -top-2 -right-2 bg-linear-to-r from-red-500 via-pink-500 to-red-600
