--- a/src/pages/productos.html
+++ b/src/pages/productos.html
@@ -130,293 +130,9 @@
      </div>
 </div>
 
-<!-- PRODUCTO 1: MacBook Pro -->
- <div class="container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mx-auto py-8">
- <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition duration-300 transform hover:-translate-y-1 product-card" data-category="laptops" data-price="6200000" data-product-id="macbook-pro-16">
-    <div class="bg-linear-to-br from-gray-100 to-gray-200 h-48 flex items-center justify-center relative overflow-hidden">
-        <img src="https://images.unsplash.com/photo-1517336714731-489689fd1ca8?ixlib=rb-4.0.3&w=600&q=80"
-         alt="MacBook Pro 16 M3"
-         class="w-full h-full object-cover hover:scale-105 transition-transform duration-300"
-         loading="lazy">
-         <div class="absolute top-3 right-3 bg-red-500 text-white px-2 py-1 rounded-full text-xs font-bold">
-            -15%
-         </div>
-    </div>
+<!-- PRODUCTOs -->
+ <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6" id="products-grid">
 
-    <div class="p-6">
-        <h3 class="text-lg font-bold mb-2 text-gray-800">MacBook Pro 16" M3</h3>
-        <p class="text-sm text-gray-600 mb-4">Chip M3, 16GB RAM, 512GB SSD</p>
-        <div class="flex items-center justify-between mb-4">
-            <div>
-                <span class="text-2xl font-bold text-blue-600">$6.200.000</span>
-            </div>
-            <div class="flex text-yellow-400">
-                ⭐️⭐️⭐️⭐️⭐️
-            </div>
-        </div>
-        <div class="flex space-x-2">
-            <button class="ver-detalles-btn bg-green-600 text-white px-3 py-2 rounded-lg hover:bg-green-700 transition duration-300 flex-1 text-sm cursor-pointer" data-product-id="macbook-pro-16">
-                Ver Detalles 
-            </button>
-            <button class="add-to-cart-btn bg-blue-600 text-white px-3 py-2 rounded-lg hover:bg-blue-700 transition duration-300 flex-1 text-sm cursor-pointer"
-            data-product="MacBook Pro 16 M3"
-            data-price="6200000"
-            data-id="macbook-pro-16">
-            Comprar
-            </button>
-        </div>
-    </div>
- </div>
-
- <!-- PRODUCTO 2: iPhone 15 Pro -->
- <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition duration-300 transform hover:-translate-y-1 product-card" data-category="celulares" data-price="4800000" data-product-id="iphone-15-pro">
-    <div class="bg-linear-to-br from-gray-100 to-gray-200 h-48 flex items-center justify-center relative overflow-hidden">
-        <img src="https://images.unsplash.com/photo-1592750475338-74b7b21085ab?ixlib=rb-4.0.3&w=600&q=80"
-         alt="MacBook Pro 16 M3"
-         class="w-full h-full object-cover hover:scale-105 transition-transform duration-300"
-         loading="lazy">
-         <div class="absolute top-3 right-3 bg-red-500 text-white px-2 py-1 rounded-full text-xs font-bold">
-            Nuevo
-         </div>
-    </div>
-
-    <div class="p-6">
-        <h3 class="text-lg font-bold mb-2 text-gray-800">iPhone 15 Pro</h3>
-        <p class="text-sm text-gray-600 mb-4">128GB, Titanio Natural</p>
-        <div class="flex items-center justify-between mb-4">
-            <div>
-                <span class="text-2xl font-bold text-blue-600">$4.800.000</span>
-            </div>
-            <div class="flex text-yellow-400">
-                ⭐️⭐️⭐️⭐️⭐️
-            </div>
-        </div>
-        <div class="flex space-x-2">
-            <button class="ver-detalles-btn bg-green-600 text-white px-3 py-2 rounded-lg hover:bg-green-700 transition duration-300 flex-1 text-sm cursor-pointer" data-product-id="macbook-pro-16">
-                Ver Detalles 
-            </button>
-            <button class="add-to-cart-btn bg-blue-600 text-white px-3 py-2 rounded-lg hover:bg-blue-700 transition duration-300 flex-1 text-sm cursor-pointer"
-            data-product="MacBook Pro 16 M3"
-            data-price="6200000"
-            data-id="macbook-pro-16">
-            Comprar
-            </button>
-        </div>
-    </div>
- </div>
-
- <!-- PRODUCTO 3: RTX 4080 -->
- <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition duration-300 transform hover:-translate-y-1 product-card" data-category="componentes" data-price="3200000" data-product-id="nvidia-rtx-4080">
-    <div class="bg-linear-to-br from-gray-100 to-gray-200 h-48 flex items-center justify-center relative overflow-hidden">
-        <img src="https://images.unsplash.com/photo-1591488320449-011701bb6704?ixlib=rb-4.0.3&w=600&q=80"
-         alt="MacBook Pro 16 M3"
-         class="w-full h-full object-cover hover:scale-105 transition-transform duration-300"
-         loading="lazy">
-         <div class="absolute top-3 right-3 bg-red-500 text-white px-2 py-1 rounded-full text-xs font-bold">
-            -15%
-         </div>
-    </div>
-
-    <div class="p-6">
-        <h3 class="text-lg font-bold mb-2 text-gray-800">NVIDIA RTX 4080</h3>
-        <p class="text-sm text-gray-600 mb-4">16GB GDDR6X, Gaming OC</p>
-        <div class="flex items-center justify-between mb-4">
-            <div>
-                <span class="text-2xl font-bold text-blue-600">$3.200.000</span>
-            </div>
-            <div class="flex text-yellow-400">
-                ⭐️⭐️⭐️⭐️⭐️
-            </div>
-        </div>
-        <div class="flex space-x-2">
-            <button class="ver-detalles-btn bg-green-600 text-white px-3 py-2 rounded-lg hover:bg-green-700 transition duration-300 flex-1 text-sm cursor-pointer" data-product-id="macbook-pro-16">
-                Ver Detalles 
-            </button>
-            <button class="add-to-cart-btn bg-blue-600 text-white px-3 py-2 rounded-lg hover:bg-blue-700 transition duration-300 flex-1 text-sm cursor-pointer"
-            data-product="MacBook Pro 16 M3"
-            data-price="6200000"
-            data-id="macbook-pro-16">
-            Comprar
-            </button>
-        </div>
-    </div>
- </div>
-
- <!-- PRODUCTO 4: Samsung Galaxy S24 -->
- <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition duration-300 transform hover:-translate-y-1 product-card" data-category="celulares" data-price="2400000" data-product-id="samsung-galaxy-s24">
-    <div class="bg-linear-to-br from-gray-100 to-gray-200 h-48 flex items-center justify-center relative overflow-hidden">
-        <img src="https://images.unsplash.com/photo-1511707171634-5f897ff02aa9?ixlib=rb-4.0.3&w=600&q=80"
-         alt="MacBook Pro 16 M3"
-         class="w-full h-full object-cover hover:scale-105 transition-transform duration-300"
-         loading="lazy">
-         <div class="absolute top-3 right-3 bg-red-500 text-white px-2 py-1 rounded-full text-xs font-bold">
-            Popular
-         </div>
-    </div>
-
-    <div class="p-6">
-        <h3 class="text-lg font-bold mb-2 text-gray-800">Samsung Galaxy S24</h3>
-        <p class="text-sm text-gray-600 mb-4">256GB, Phantom Black</p>
-        <div class="flex items-center justify-between mb-4">
-            <div>
-                <span class="text-2xl font-bold text-blue-600">$2.400.000</span>
-            </div>
-            <div class="flex text-yellow-400">
-                ⭐️⭐️⭐️⭐️⭐️
-            </div>
-        </div>
-        <div class="flex space-x-2">
-            <button class="ver-detalles-btn bg-green-600 text-white px-3 py-2 rounded-lg hover:bg-green-700 transition duration-300 flex-1 text-sm cursor-pointer" data-product-id="macbook-pro-16">
-                Ver Detalles 
-            </button>
-            <button class="add-to-cart-btn bg-blue-600 text-white px-3 py-2 rounded-lg hover:bg-blue-700 transition duration-300 flex-1 text-sm cursor-pointer"
-            data-product="MacBook Pro 16 M3"
-            data-price="6200000"
-            data-id="macbook-pro-16">
-            Comprar
-            </button>
-        </div>
-    </div>
- </div>
-
- <!-- PRODUCTO 5: Dell XPS 13 -->
- <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition duration-300 transform hover:-translate-y-1 product-card" data-category="laptops" data-price="3500000" data-product-id="dell-xps-13">
-    <div class="bg-linear-to-br from-gray-100 to-gray-200 h-48 flex items-center justify-center relative overflow-hidden">
-        <img src="https://images.unsplash.com/photo-1588872657578-7efd1f1555ed?ixlib=rb-4.0.3&w=600&q=80"
-         alt="MacBook Pro 16 M3"
-         class="w-full h-full object-cover hover:scale-105 transition-transform duration-300"
-         loading="lazy">
-    </div>
-
-    <div class="p-6">
-        <h3 class="text-lg font-bold mb-2 text-gray-800">Dell XPS 13</h3>
-        <p class="text-sm text-gray-600 mb-4">Intel 17, 16GB RAM, 512GB SSD</p>
-        <div class="flex items-center justify-between mb-4">
-            <div>
-                <span class="text-2xl font-bold text-blue-600">$3.500.000</span>
-            </div>
-            <div class="flex text-yellow-400">
-                ⭐️⭐️⭐️⭐️⭐️
-            </div>
-        </div>
-        <div class="flex space-x-2">
-            <button class="ver-detalles-btn bg-green-600 text-white px-3 py-2 rounded-lg hover:bg-green-700 transition duration-300 flex-1 text-sm cursor-pointer" data-product-id="macbook-pro-16">
-                Ver Detalles 
-            </button>
-            <button class="add-to-cart-btn bg-blue-600 text-white px-3 py-2 rounded-lg hover:bg-blue-700 transition duration-300 flex-1 text-smcursor-pointer"
-            data-product="MacBook Pro 16 M3"
-            data-price="6200000"
-            data-id="macbook-pro-16">
-            Comprar
-            </button>
-        </div>
-    </div>
- </div>
-
- <!-- PRODUCTO 6: AMD Ryzen 7 -->
- <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition duration-300 transform hover:-translate-y-1 product-card" data-category="componentes" data-price="1100000" data-product-id="amd-ryzen-7">
-    <div class="bg-linear-to-br from-gray-100 to-gray-200 h-48 flex items-center justify-center relative overflow-hidden">
-        <img src="https://images.unsplash.com/photo-1555617981-dac3880eac6e?ixlib=rb-4.0.3&w=600&q=80"
-         alt="MacBook Pro 16 M3"
-         class="w-full h-full object-cover hover:scale-105 transition-transform duration-300"
-         loading="lazy">
-         <div class="absolute top-3 right-3 bg-red-500 text-white px-2 py-1 rounded-full text-xs font-bold">
-            Hot
-         </div>
-    </div>
-
-    <div class="p-6">
-        <h3 class="text-lg font-bold mb-2 text-gray-800">AMD Ryzen 7 7800XED</h3>
-        <p class="text-sm text-gray-600 mb-4">8-Core, 4.2GHz, AMS</p>
-        <div class="flex items-center justify-between mb-4">
-            <div>
-                <span class="text-2xl font-bold text-blue-600">$1.100.000</span>
-            </div>
-            <div class="flex text-yellow-400">
-                ⭐️⭐️⭐️⭐️⭐️
-            </div>
-        </div>
-        <div class="flex space-x-2">
-            <button class="ver-detalles-btn bg-green-600 text-white px-3 py-2 rounded-lg hover:bg-green-700 transition duration-300 flex-1 text-sm cursor-pointer" data-product-id="macbook-pro-16">
-                Ver Detalles 
-            </button>
-            <button class="add-to-cart-btn bg-blue-600 text-white px-3 py-2 rounded-lg hover:bg-blue-700 transition duration-300 flex-1 text-sm cursor-pointer"
-            data-product="MacBook Pro 16 M3"
-            data-price="6200000"
-            data-id="macbook-pro-16">
-            Comprar
-            </button>
-        </div>
-    </div>
- </div>
-
- <!-- PRODUCTO 7: AirPods Pro -->
- <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition duration-300 transform hover:-translate-y-1 product-card" data-category="accesorios" data-price="750000" data-product-id="airpods-pro">
-    <div class="bg-linear-to-br from-gray-100 to-gray-200 h-48 flex items-center justify-center relative overflow-hidden">
-        <img src="https://images.unsplash.com/photo-1606220588913-b3aacb4d2f46?ixlib=rb-4.0.3&w=600&q=80"
-         alt="MacBook Pro 16 M3"
-         class="w-full h-full object-cover hover:scale-105 transition-transform duration-300"
-         loading="lazy">
-    </div>
-
-    <div class="p-6">
-        <h3 class="text-lg font-bold mb-2 text-gray-800">AirPods Pro (2ª Gen)</h3>
-        <p class="text-sm text-gray-600 mb-4">Cancelacion activa de ruido</p>
-        <div class="flex items-center justify-between mb-4">
-            <div>
-                <span class="text-2xl font-bold text-blue-600">$750.000</span>
-            </div>
-            <div class="flex text-yellow-400">
-                ⭐️⭐️⭐️⭐️⭐️
-            </div>
-        </div>
-        <div class="flex space-x-2">
-            <button class="ver-detalles-btn bg-green-600 text-white px-3 py-2 rounded-lg hover:bg-green-700 transition duration-300 flex-1 text-sm cursor-pointer" data-product-id="macbook-pro-16">
-                Ver Detalles 
-            </button>
-            <button class="add-to-cart-btn bg-blue-600 text-white px-3 py-2 rounded-lg hover:bg-blue-700 transition duration-300 flex-1 text-sm cursor-pointer"
-            data-product="MacBook Pro 16 M3"
-            data-price="6200000"
-            data-id="macbook-pro-16">
-            Comprar
-            </button>
-        </div>
-    </div>
- </div>
-
- <!-- PRODUCTO 8: Silla Gaming -->
- <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition duration-300 transform hover:-translate-y-1 product-card" data-category="accesorios" data-price="890000" data-product-id="silla-gaming">
-    <div class="bg-linear-to-br from-gray-100 to-gray-200 h-48 flex items-center justify-center relative overflow-hidden">
-        <img src="https://images.unsplash.com/photo-1541558869434-2840d308329a?ixlib=rb-4.0.3&w=600&q=80"
-         alt="MacBook Pro 16 M3"
-         class="w-full h-full object-cover hover:scale-105 transition-transform duration-300"
-         loading="lazy">
-    </div>
-
-    <div class="p-6">
-        <h3 class="text-lg font-bold mb-2 text-gray-800">Silla Gaming Pro</h3>
-        <p class="text-sm text-gray-600 mb-4">Ergonomica, LED RGB</p>
-        <div class="flex items-center justify-between mb-4">
-            <div>
-                <span class="text-2xl font-bold text-blue-600">$890.000</span>
-            </div>
-            <div class="flex text-yellow-400">
-                ⭐️⭐️⭐️⭐️⭐️
-            </div>
-        </div>
-        <div class="flex space-x-2">
-            <button class="ver-detalles-btn bg-green-600 text-white px-3 py-2 rounded-lg hover:bg-green-700 transition duration-300 flex-1 text-sm cursor-pointer" data-product-id="macbook-pro-16">
-                Ver Detalles 
-            </button>
-            <button class="add-to-cart-btn bg-blue-600 text-white px-3 py-2 rounded-lg hover:bg-blue-700 transition duration-300 flex-1 text-sm cursor-pointer"
-            data-product="MacBook Pro 16 M3"
-            data-price="6200000"
-            data-id="macbook-pro-16">
-            Comprar
-            </button>
-        </div>
-    </div>
- </div>
  </div>
 
  <!-- Paginacion -->
@@ -486,4 +202,5 @@
     </div>
  </footer>
 </body>
+<script src="./java/productos.js"></script>
 </html>
