--- a/src/pages/perfil.html
+++ b/src/pages/perfil.html
@@ -1,60 +1,101 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <title>Perfil de Usuario</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TechStore Pro - Su tienda tecnologica online</title>
+    <link rel="stylesheet" href="../style/output.css">
 </head>
-<body class="bg-gray-100 flex justify-center items-center min-h-screen">
-
-  <div class="bg-white w-full max-w-5xl p-8 rounded-xl shadow-lg">
-
-    <!-- Encabezado -->
-    <div class="flex items-center space-x-6">
-        <div id="user-menu-container"></div>
-      <div>
-        <h2 class="text-2xl font-bold text-gray-800">jimy</h2>
-        <p class="text-gray-500">andrea@gmail.com</p>
-      </div>
-    </div>
-
-    <hr class="my-6">
-
-    <!-- Formulario -->
-    <form class="space-y-8">
-
-      <!-- Nombre -->
-      <div>
-        <label class="block text-gray-700 font-semibold mb-1">Nombre</label>
-        <input type="text" value="jimy"
-          class="w-full p-3 rounded-lg border border-gray-300 bg-gray-100 focus:outline-none focus:ring-2 focus:ring-purple-400">
-      </div>
-
-      <!-- Correo -->
-      <div>
-        <label class="block text-gray-700 font-semibold mb-1">Correo Electrónico</label>
-        <input type="email" value="andrea@gmail.com"
-          class="w-full p-3 rounded-lg border border-gray-300 bg-gray-100 focus:outline-none focus:ring-2 focus:ring-purple-400">
-      </div>
-
-      <!-- Teléfono -->
-      <div>
-        <label class="block text-gray-700 font-semibold mb-1">Teléfono</label>
-        <input type="text" value="3202358243"
-          class="w-full p-3 rounded-lg border border-gray-300 bg-gray-100 focus:outline-none focus:ring-2 focus:ring-purple-400">
-      </div>
-
-      <!-- Botón -->
-      <button
-        class="w-full py-3 rounded-lg text-white font-semibold text-lg 
-        bg-gradient-to-r from-blue-500 to-purple-600 hover:opacity-90 transition">
-        Editar Perfil
-      </button>
-
-    </form>
-  </div>
-
+<body class="bg-gray-50 font-sans">
+<header class="bg-white shadow-lg sticky top-0 z-50">
+    <nav class="container mx-auto px-4 py-4">
+        <div class="flex justify-between items-center">
+            <!--Logo-->
+            <div class="flex items-center">
+                <div class="bg-linear-to-r from-blue-600 to-purple-600 text-white px-3 py-2 rounded-lg mr-3">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20">
+                        <path d="M3 4a1 1 0 011-1h12a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1V4zM3 10a1 1 0 011-1h6a1 1 0 011 1v6a1 1 0 01-1 1H4a1 1 0 01-1-1v-6zM14 9a1 1 0 00-1 1v6a1 1 0 001 1h2a1 1 0 001-1v-6a1 1 0 00-1-1h-2z"/>
+                    </svg>
+                </div>
+                <h1 class="text-2xl font-bold bg-linear-to-r from-blue-600 to-purple-600 bg-clip-text text-transparent"><a href="../pages/index.html">TechStore Pro</a></h1>
+            </div>
+            <!--menu-->
+            <div class="hidden md:flex space-x-6">
+                <a href="../pages/index.html" class="text-gray-700 hover:text-blue-600 font-medium transition-colors duration-200 relative group">Inicio<span class="absolute -bottom-1 left-0 w-full h-0.5 bg-blue-600"></span></a>
+                <a href="../pages/productos.html" class="text-gray-700 hover:text-blue-600 font-medium transition-colors duration-200 relative group">Productos<span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-600 transition-all duration-200 group-hover:w-full"></span></a>
+                <a href="../pages/categoria.html" class="text-gray-700  hover:text-blue-600 font-medium transition-colors duration-200 relative group">Categorías<span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-600 transition-all duration-200 group-hover:w-full"></span></a>
+                <a href="./contacto.html" class="text-gray-700  hover:text-blue-600 font-medium transition-colors duration-200 relative group">Contacto<span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-600 transition-all duration-200 group-hover:w-full"></span></a>
+            </div>
+            <!--menu mejorado-->
+            <div class="flex items-center space-x-4">
+                <!--Carrito-->
+                <a href="#" class="cart-icon relative group p-2.5 hover:bglinear-to-r hover:from-blue-50 hover:to-indigo-50 rounded-xl transition-all duration-300 transform hover:scale-105"><svg class="w-6 h-6 text-gray-700 group-hover:text-blue-600 transition-all duration-300 group-hover:rotate-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M3 3h2l.4 2M7 13h10l4-8H5.4m0 0L7 13m0 0l-1.1 5M7 13l-1.1 5m0 0h1.1m0-5v5m0 0h10m-10 0a2 2 0 104 0m6 0a2 2 0 100 4"/></svg><span id="cart-counter" class="cart-counter-pulse absolute -top-2 -right-2 bg-linear-to-r from-red-500 via-pink-500 to-red-600 text-white text-xs font-bold rounded-full min-w-5 h-5 fle items-center justify-center px-1 shadow-lg border-2 border-white" style="display:none;">0</span></a>
+                <a href="./login.html" class="relative group p-2.5 hover:bg-linear-to-r hover:from-blue-50 hover:to-indigo-50 rounded-xl tensition-all duration-300 transform hover:scale-105">
+                <svg class="w-6 h-6 text-gray-700 group-hover:text-blue-600 transition-all duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"/>
+                </svg>
+            </a>
+            </div>
+        </div>
+    </nav>
+</header>
+    <!-- Contenido Principal -->
+    <main class="container mx-auto px-4 mt-40">
+        <div class="max-w-4xl mx-auto bg-white rounded-2xl shadow-2xl overflow-hidden">
+            <!-- Header del Perfil -->
+            <div class="bg-white border-b border-gray-200 px-8 py-8">
+                <div class="flex items-center gap-6">
+                  <div id="user-menu-container"></div>
+                    <div class="text-left">
+                        <h2 class="text-3xl font-bold text-gray-900 mb-1" id="display-name"></h2>
+                        <p class="text-gray-600 text-lg" id="display-email"></p>
+                    </div>
+                </div>
+            </div>
+            <!-- Formulario del Perfil -->
+            <div class="p-8">
+                <form id="profile-form">
+                    <!-- Fila: Nombre y Apellido -->
+                        <div class="mb-6">
+                            <label for="nombre" class="block text-sm font-semibold text-gray-700 mb-2">
+                                Nombre
+                            </label>
+                            <input  type="text"  id="nombre"    disabled class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg bg-gray-50 text-gray-900 focus:border-blue-600 focus:bg-white focus:outline-none transition-all duration-200 disabled:bg-gray-100 disabled:cursor-not-allowed">
+                        </div>
+                    <!-- Teléfono -->
+                    <div class="mb-8">
+                        <label for="telefono" class="block text-sm font-semibold text-gray-700 mb-2">
+                            Teléfono
+                        </label>
+                        <input  type="telefono"  id="telefono"   disabled class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg bg-gray-50 text-gray-900 focus:border-blue-600 focus:bg-white focus:outline-none transition-all duration-200 disabled:bg-gray-100 disabled:cursor-not-allowed">
+                    </div>
+                     <!-- Correo Electrónico -->
+                    <div class="mb-6">
+                        <label for="email" class="block text-sm font-semibold text-gray-700 mb-2">
+                            Correo Electrónico
+                        </label>
+                        <input type="email" id="email"  disabled class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg bg-gray-50 text-gray-900 focus:border-blue-600 focus:bg-white focus:outline-none transition-all duration-200 disabled:bg-gray-100 disabled:cursor-not-allowed">
+                    </div>
+                    <!-- Botones -->
+                    <div class="flex flex-col sm:flex-row gap-4 justify-center">
+                        <!-- Botón Editar Perfil (visible por defecto) -->
+                        <button type="button" id="btn-editar" class="px-14 py-4 bg-linear-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700 text-white font-semibold rounded-lg shadow-lg transition-all duration-300 transform hover:scale-105">
+                            Editar Perfil
+                        </button>
+                        <!-- Botones de Guardar y Cancelar (ocultos por defecto) -->
+                        <div id="btn-group-edit" class="fle flex-col sm:flex-row gap-4 hidden">
+                            <button type="button"  id="btn-guardar" class="px-14 py-4 bg-linear-to-r bg-green-600 text-white font-semibold rounded-lg shadow-lg transition-all duration-300 transform hover:scale-105">
+                                Guardar Cambios
+                            </button>
+                            <button  type="button"  id="btn-cancelar" class="px-14 py-4 bg-linear-to-r bg-red-600 text-white font-semibold rounded-lg shadow-lg transition-all duration-300 transform hover:scale-105">
+                                Cancelar
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </main>
 </body>
 <script src="./java/miperfil.js"></script>
 </html>
