--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -158,7 +158,7 @@
                             <input type="checkbox" id="remenber-me" class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500">
                             <span class="ml-2 text-sm text-gray-700">Recordarme</span>          
                         </label>
-                        <a href="#" class="text-sm text-blue-600 hover:text-blue-700 font-medium transition-colors">¿olvidaste tu Contraseña?</a>
+                        <a href="./recuperar.html" class="text-sm text-blue-600 hover:text-blue-700 font-medium transition-colors">¿olvidaste tu Contraseña?</a>
                     </div>
                     <div id="login-error" class="hidden bg-red-50 border border-red-200 text-red-800 px-4 py-3 rounded-lg">
                         <div class="flex items-center">
