--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -53,12 +53,11 @@
                   <!-- Cart and Mobile Menu MEJORADOS -->
                    <div class="flex items-center space-x-4">
                     <!-- ICONO DE CARRITO MEJORADO - coherente con carrito.html -->
-                    <a href="#" class="cart-icon relative group p-2.5 hover:bglinear-to-r hover:from-blue-50 hover:to-indigo-50 rounded-xl transition-all
+                    <a href="./carrito.html" class="cart-icon relative group p-2.5 hover:bglinear-to-r hover:from-blue-50 hover:to-indigo-50 rounded-xl transition-all
                     duration-300 transform hover:scale-105">
                     <svg class="w-6 h-6 text-gray-700 group-hover:textblue-600 transition-all duration-300 group-hover:rotate-3" fill="none"
                     stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-                    <path stroke-linecap="round" strokelinejoin="round" d="M3 3h2l.4 2M7 13h10l4-8H5.4m0 0L7 13m0 0l-1.1 5M7 13l-1.1
-                    5m0 0h1.1m0-5v5m0 0h10m-10 0a2 2 0 104 0m6 0a2 2 0 100 4"/>
+                    <path stroke-linecap="round" strokelinejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"/>
                 </svg>
                 <!--ICONO DE LOGIN - AGREGAR AQUI -->
                 <a href="./login.html" class="relative group p-2.5 hover:bg-linear-to-r hover:from-blue-50 hover:to-indigo-50 rounded-xl transition-all duration-300 transform hover:scale-105">
