--- a/src/pages/carrito.html
+++ b/src/pages/carrito.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/bdc4e23805.js" crossorigin="anonymous"></script>
      <link rel="stylesheet" href="../style/output.css">
-    <title>Document</title>
+    <title>Carrito</title>
 </head>
 <body class="bg-gray-50 font-sans">
     <header class="bg-white shadow-lg sticky top-0 z-50">
@@ -21,97 +21,84 @@
                     <h1 class="text-2xl font-bold bg-linear-to-r from-blue-600 to-purple-600 bg-clip-text text-transparent"><a href="../pages/index.html">TechStore Pro</a></h1>
                 </div>
                 <!--menu-->
-                <div class="hidden md:flex space-x-6">
+                <div class="hidden md:flex space-x-8">
                     <a href="../pages/index.html" class="text-gray-700 hover:text-blue-600 font-medium transition-colors duration-200 relative group">Inicio<span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-600 transition-all
                         duration-200 group-hover:w-full"></span></a>
                     <a href="../pages/productos.html" class="text-gray-700 hover:text-blue-600 font-medium transition-colors duration-200 relative group">Productos<span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-600 transition-all duration-200 group-hover:w-full"></span></a>
-                    <a href="../pages/categorias.html" class="text-gray-700  hover:text-blue-600 font-medium transition-colors duration-200 relative group">Categorías<span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-600 transition-all duration-200 group-hover:w-full"></span></a>
-                    <a href="../pages/contacto.html" class="text-gray-700  hover:text-blue-600 font-medium transition-colors duration-200 relative group">Contacto<span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-600 transition-all duration-200 group-hover:w-full"></span></a>
                 </div>
                 <!--menu mejorado-->
                 <div class="flex items-center space-x-4">
                     <!--Carrito-->
-                    <a href="./carrito.html" class="cart-icon relative group p-2.5 hover:bglinear-to-r hover:from-blue-50 hover:to-indigo-50 rounded-xl transition-all duration-300 transform hover:scale-105"><svg class="w-6 h-6 text-gray-700 group-hover:text-blue-600 transition-all duration-300 group-hover:rotate-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"/></svg><span id="cart-counter" class="cart-counter-pulse absolute -top-2 -right-2 bg-linear-to-r from-red-500 via-pink-500 to-red-600 text-white text-xs font-bold rounded-full min-w-5 h-5 fle items-center justify-center px-1 shadow-lg border-2 border-white" style="display:none;">0</span></a>
+                    <a href="#" class="relative group p-2.5 bg-linear-to-r from-blue-50 to-indigo-50  rounded-xl"><svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"/></svg><span id="cart-counter" class="cart-counter-pulse absolute -top-2 -right-2 bg-linear-to-r from-red-500 via-pink-500 to-red-600 text-white text-xs font-bold rounded-full min-w-5 h-5 fle items-center justify-center px-1 shadow-lg border-2 border-white" style="display:none;">0</span></a>
                 </div>
             </div>
         </nav>
     </header>
     <section id="contacto" class="bg-gray-50 py-16">
-  <div class="max-w-6xl mx-auto px-6">
-    <h2 class="text-3xl font-bold text-center mb-4 text-gray-800">
-      Contáctanos
-    </h2>
-    <p class="text-center text-gray-600 mb-12">
-      ¿Tienes preguntas o necesitas ayuda? ¡Envíanos un mensaje!
-    </p>
-
-    <div class="grid md:grid-cols-2 gap-10">
-      <!-- Formulario -->
-      <form class="bg-white shadow-lg rounded-2xl p-8 space-y-5">
+  <div class="max-w-6xl mx-auto px-6 mt-20">
+    <div class="grid md:grid-cols-2 gap-10 space-y-96">
+        <!-- IZQUIERDA - TÍTULO -->
         <div>
-          <label class="block text-gray-700 font-medium mb-2">Nombre</label>
-          <input
-            type="text"
-            placeholder="Tu nombre"
-            class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
-          />
+            <h1 class="text-3xl font-semibold flex items-center gap-2">
+                <span class="text-blue-600 text-2xl">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                </svg>
+                </span>Tu Carrito</h1>
+            <p class="text-gray-500 mt-1">Revisa tus productos antes de finalizar la compra</p>
         </div>
-
-        <div>
-          <label class="block text-gray-700 font-medium mb-2">Correo electrónico</label>
-          <input
-            type="email"
-            placeholder="tucorreo@ejemplo.com"
-            class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
-          />
+        <!-- DERECHA - CONTENEDOR DEL RESUMEN -->
+        <div class="w-[380px] bg-white shadow-xl rounded-2xl p-6">
+            <h2 class="text-xl font-semibold flex items-center gap-2">
+                <span class="text-blue-600 text-2xl">📦</span> Resumen del Pedido
+            </h2>
+            <div class="mt-4">
+                <div class="flex justify-between py-1">
+                    <span class="text-gray-600">Subtotal</span>
+                    <span class="font-medium">$0</span>
+                </div>
+                <div class="flex justify-between py-1">
+                    <span class="text-gray-600">Envío</span>
+                    <span class="text-green-600 font-semibold">Gratis</span>
+                </div>
+            </div>
+            <div class="mt-4 bg-gray-100 rounded-xl p-3 flex justify-between font-bold">
+                <span>Total</span>
+                <span class="text-blue-600">$0</span>
+            </div>
+            <hr class="my-4">
+            <!-- Información de envío -->
+            <h3 class="font-semibold mb-2 flex items-center gap-2">
+                <span class="text-blue-600">📍</span> Información de Envío
+            </h3>
+            <input type="text" placeholder="Ej: Calle 123 #45-67"
+                class="w-full border border-gray-300 rounded-lg p-3">
+            <div class="flex gap-3 mt-3">
+                <h3 class="font-semibold mb-2 flex items-center gap-2">
+                    Ciudad
+                <input class="w-1/2 border border-gray-300 rounded-lg p-3" value="Bogotá">
+                <input class="w-1/2 border border-gray-300 rounded-lg p-3" value="110111">
+                </h3>
+            </div>
+            <select class="w-full border border-gray-300 rounded-lg p-3 mt-3">
+                <option>Efectivo contra entrega</option>
+                <option>Pago con tarjeta</option>
+                <option>Pago en especie</option>
+            </select>
+            <!-- Botón -->
+            <button
+                class="w-full mt-5 py-3 rounded-xl text-white font-semibold bg-gradient-to-r from-blue-600 to-purple-500">
+                ✓ Finalizar Compra
+            </button>
+            <ul class="mt-5 text-gray-700 space-y-1 text-sm">
+                <li>✓ Compra segura y protegida</li>
+                <li>✓ Envío gratis en compras +$100.000</li>
+                <li>✓ Soporte 24/7</li>
+            </ul>
         </div>
-
-        <div>
-          <label class="block text-gray-700 font-medium mb-2">Mensaje</label>
-          <textarea
-            rows="4"
-            placeholder="Escribe tu mensaje..."
-            class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
-          ></textarea>
-        </div>
-
-        <button
-          type="submit"
-          class="w-full bg-blue-600 text-white font-semibold py-2 rounded-lg hover:bg-blue-700 transition"
-        >
-          Enviar mensaje
-        </button>
-      </form>
-
-      <!-- Información de contacto -->
-      <div class="flex flex-col justify-center space-y-6">
-        <div class="flex items-center space-x-3">
-          <i class="fas fa-map-marker-alt text-blue-600 text-2xl"></i>
-          <p class="text-gray-700">Calle 123 #45-67, Bogotá, Colombia</p>
-        </div>
-        <div class="flex items-center space-x-3">
-          <i class="fas fa-phone text-blue-600 text-2xl"></i>
-          <p class="text-gray-700">+57 300 123 4567</p>
-        </div>
-        <div class="flex items-center space-x-3">
-          <i class="fas fa-envelope text-blue-600 text-2xl"></i>
-          <p class="text-gray-700">soporte@techstorepro.com</p>
-        </div>
-
-        <div class="mt-6">
-          <h3 class="font-semibold text-gray-800 mb-3">Síguenos</h3>
-          <div class="flex space-x-4 text-blue-600 text-2xl">
-            <a href="#"><i class="fa-brands fa-facebook hover:text-blue-800"></i></a>
-            <a href="#"><i class="fab fa-instagram hover:text-pink-600"></i></a>
-            <a href="#"><i class="fab fa-whatsapp hover:text-green-600"></i></a>
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
 </section>
-</body>
-<footer id="contacto" class="bg-gray-900 text-white py-12 mt-65">
+<footer id="contacto" class="bg-gray-900 text-white py-12 mt-35">
         <div class="max-w-7xl mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
@@ -155,4 +142,5 @@
             </div>
         </div>
     </footer>
+</body>
 </html>
