--- a/src/pages/perfil.html
+++ b/src/pages/perfil.html
@@ -45,7 +45,7 @@
             <!-- Header del Perfil -->
             <div class="bg-white border-b border-gray-200 px-8 py-8">
                 <div class="flex items-center gap-6">
-                  <div id="user-menu-container"></div>
+                    <div id="user-menu-container"></div>
                     <div class="text-left">
                         <h2 class="text-3xl font-bold text-gray-900 mb-1" id="display-name"></h2>
                         <p class="text-gray-600 text-lg" id="display-email"></p>
@@ -77,7 +77,7 @@
                         <input type="email" id="email"  disabled class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg bg-gray-50 text-gray-900 focus:border-blue-600 focus:bg-white focus:outline-none transition-all duration-200 disabled:bg-gray-100 disabled:cursor-not-allowed">
                     </div>
                     <!-- Botones -->
-                    <div class="flex flex-col sm:flex-row gap-4 justify-center">
+                    <div class="flex flex-col-2 sm:flex-row gap-4 justify-center">
                         <!-- Botón Editar Perfil (visible por defecto) -->
                         <button type="button" id="btn-editar" class="px-14 py-4 bg-linear-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700 text-white font-semibold rounded-lg shadow-lg transition-all duration-300 transform hover:scale-105">
                             Editar Perfil
@@ -86,6 +86,9 @@
                         <div id="btn-group-edit" class="fle flex-col sm:flex-row gap-4 hidden">
                             <button type="button"  id="btn-guardar" class="px-14 py-4 bg-linear-to-r bg-green-600 text-white font-semibold rounded-lg shadow-lg transition-all duration-300 transform hover:scale-105">
                                 Guardar Cambios
+                            </button>
+                            <button type="button" id="btn-eliminar" class="px-14 py-4 bg-red-500 text-white font-semibold rounded-lg transition-all duration-300 transform hover:scale-105">
+                                Eliminar Perfil
                             </button>
                             <button  type="button"  id="btn-cancelar" class="px-14 py-4 bg-linear-to-r bg-red-600 text-white font-semibold rounded-lg shadow-lg transition-all duration-300 transform hover:scale-105">
                                 Cancelar
@@ -96,6 +99,6 @@
             </div>
         </div>
     </main>
+    <script src="./java/perfilnuevo.js"></script>
 </body>
-<script src="./java/miperfil.js"></script>
 </html>
