mas datos nuevos

--- a/src/pages/carrito.html
+++ b/src/pages/carrito.html
@@ -34,21 +34,21 @@
             </div>
         </nav>
     </header>
-    <section id="contacto" class="bg-gray-50 py-16">
-  <div class="max-w-6xl mx-auto px-6 mt-20">
-    <div class="grid md:grid-cols-2 gap-10 space-y-96">
+    <div class="grid md:grid-cols-2 gap-96 space-y-96">
         <!-- IZQUIERDA - TÍTULO -->
-        <div>
+         <div class="py-24 mx-auto">
+            <h2 class="text-2xl py-2"><a href="./index.html">Inicio ></a></h2>
             <h1 class="text-3xl font-semibold flex items-center gap-2">
                 <span class="text-blue-600 text-2xl">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-                </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                    </svg>
                 </span>Tu Carrito</h1>
-            <p class="text-gray-500 mt-1">Revisa tus productos antes de finalizar la compra</p>
-        </div>
+                <p class="text-gray-500 mt-1">Revisa tus productos antes de finalizar la compra</p>
+            </div>
+        <div class="max-w-7xl mx-auto px-2 mt-60">
         <!-- DERECHA - CONTENEDOR DEL RESUMEN -->
-        <div class="w-[380px] bg-white shadow-xl rounded-2xl p-6">
+        <div class="w-[480px] bg-white shadow-xl rounded-2xl p-6">
             <h2 class="text-xl font-semibold flex items-center gap-2">
                 <span class="text-blue-600 text-2xl">📦</span> Resumen del Pedido
             </h2>
@@ -97,50 +97,7 @@
             </ul>
         </div>
     </div>
+    </div>
 </section>
-<footer id="contacto" class="bg-gray-900 text-white py-12 mt-35">
-        <div class="max-w-7xl mx-auto px-4">
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-                <div>
-                    <div class="flex items-center mb-4">
-                        <div class="bg-linear-to-r from-blue-600 to-purple-600 text-white p-2 rounded-lg mr-3">
-                            <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
-                                <path d="M3 4a1 1 0 011-1h12a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1V4zM3 10a1 1 0 011-1h6a1 1 0 011 1v6a1 1 0 01-1 1H4a1 1 0 01-1-1v-6zM14 9a1 1 0 00-1 1v6a1 1 0 001 1h2a1 1 0 001-1v-6a1 1 0 00-1-1h-2z"/>
-                            </svg>
-                        </div>
-                        <h3 class="text-xl font-bold">TechStore Pro</h3>
-                    </div>
-                    <p class="text-gray-400 mb-4">Tu tienda de tecnología de confianza con los mejores productos y precios.</p>
-                </div>
-                <div>
-                    <h3 class="text-lg font-semibold mb-4">Enlaces</h3>
-                    <ul class="space-y-2 text-gray-400">
-                        <li><a href="./index.html" class="hover:text-white transition-colors duration-200">Inicio</a></li>
-                        <li><a href="#" class="hover:text-white transition-colors duration-200">Productos</a></li>
-                        <li><a href="#" class="hover:text-white transition-colors duration-200">Carrito</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h3 class="text-lg font-semibold mb-4">Atención</h3>
-                    <ul class="space-y-2 text-gray-400">
-                        <li><a href="#" class="hover:text-white transition-colors duration-200">Contacto</a></li>
-                        <li><a href="#" class="hover:text-white transition-colors duration-200">Envíos</a></li>
-                        <li><a href="#" class="hover:text-white transition-colors duration-200">Devoluciones</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h3 class="text-lg font-semibold mb-4">Legal</h3>
-                    <ul class="space-y-2 text-gray-400">
-                        <li><a href="#" class="hover:text-white transition-colors duration-200">Términos</a></li>
-                        <li><a href="#" class="hover:text-white transition-colors duration-200">Privacidad</a></li>
-                        <li><a href="#" class="hover:text-white transition-colors duration-200">Cookies</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
-                <p>&copy; 2025 TechStore Pro. Todos los derechos reservados.</p>
-            </div>
-        </div>
-    </footer>
 </body>
 </html>
